--- a/Clase 2/.env
+++ b/Clase 2/.env
@@ -1,1 +1,3 @@
 VITE_BASE_URL = http://localhost:4000
+VITE_USER_KEY  = 4ff5692f896141e1ba7b71017b2842ba
+VITE_ADMIN_KEY = 97ef6616832542a88d5a4aecf9528234
