--- a/Mongoose + Express/package.json
+++ b/Mongoose + Express/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.3"
